bmvc arxiv paper added

--- a/mypubs.bib
+++ b/mypubs.bib
@@ -1,30 +1,64 @@
-% Encoding: ISO-8859-1
+% This file was created with JabRef 2.10.
+% Encoding: ISO8859_1
+
+
+@Article{henschel:arxiv:2017,
+  Title                    = {Improvements to Frank-Wolfe optimization for multi-detector multi-object tracking},
+  Author                   = {R. Henschel and \textbf{L. Leal-Taix{\'e}} and D. Cremers and B. Rosenhahn},
+  Journal                  = {arXiv:1705.08314},
+  Year                     = {2017},
+
+  Authorweb                = {R. Henschel and L. Leal-Taix{\'e} and D. Cremers and B. Rosenhahn},
+  Icon                     = {{{ site.url }}/images/papers/HenLeaCreRosArxiv2017.png},
+  Pllinks                  = {[PDF]:https://arxiv.org/abs/1705.08314},
+
+  Owner                    = {lealtaix},
+  Timestamp                = {2017.05.24}
+}
+
+@Article{lealtaixearxiv2017,
+  Title                    = {Tracking the Trackers: An Analysis of the State of the Art in Multiple Object Tracking},
+  Author                   = {\textbf{L. Leal-Taix{\'e}} and A. Milan and K. Schindler and D. Cremers and I. Reid and S. Roth},
+  Journal                  = {arXiv:1704.02781},
+  Year                     = {2017},
+
+  Authorweb                = {L. Leal-Taix{\'e} and A. Milan and K. Schindler and D. Cremers and I. Reid and S. Roth},
+  Icon                     = {{{ site.url }}/images/papers/LeaMilSchCreReiRotArxiv2017.png},
+  Pllinks                  = {[PDF]:https://arxiv.org/abs/1704.02781},
+
+  Journalshort             = {arXiv:1704.02781},
+  Timestamp                = {2017.04.12}
+}
 
 @Article{hazirbas:arxiv:2017,
-  author       = {C. Hazirbas and \textbf{L. Leal-Taix{\'e}} and D. Cremers},
-  title        = {Deep Depth from Focus},
-  journal      = {arXiv:1704.01085},
-  year         = {2017},
-  icon         = {{{ site.url }}/images/papers/HazLeaCreArxiv2017.png},
-  pllinks      = {[PDF]:https://arxiv.org/abs/1704.01085},
-  authorweb    = {C. Hazirbas and L. Leal-Taix{\'e} and D. Cremers},
-  journalshort = {arXiv:1704.01085},
-  owner        = {lealtaix},
-  timestamp    = {2017.04.05},
+  Title                    = {Deep Depth from Focus},
+  Author                   = {C. Hazirbas and \textbf{L. Leal-Taix{\'e}} and D. Cremers},
+  Journal                  = {arXiv:1704.01085},
+  Year                     = {2017},
+
+  Authorweb                = {C. Hazirbas and L. Leal-Taix{\'e} and D. Cremers},
+  Icon                     = {{{ site.url }}/images/papers/HazLeaCreArxiv2017.png},
+  Pllinks                  = {[PDF]:https://arxiv.org/abs/1704.01085},
+
+  Journalshort             = {arXiv:1704.01085},
+  Owner                    = {lealtaix},
+  Timestamp                = {2017.04.05}
 }
 
 @Article{caellescvpr2017,
-  author        = {S. Caelles and K.-K. Maninis and J. Pont-Tuset and \textbf{L. Leal-Taix{\'e}} and D. Cremers and L. Van Gool},
-  title         = {One-Shot Video Object Segmentation},
-  journal       = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
-  year          = {2017},
-  icon          = {{{ site.url }}/images/papers/CaeManPonLeaCreVanCVPR2017.png},
-  pllinks       = {[PDF]:https://arxiv.org/abs/1611.05198},
-  authorweb     = {S. Caelles and K.-K. Maninis and J. Pont-Tuset and L. Leal-Taix{\'e} and D. Cremers and L. Van Gool},
-  journalshort  = {CVPR},
-  date-added    = {2016-12-23 09:55:21 +0000},
-  date-modified = {2016-12-23 09:57:02 +0000},
-  timestamp     = {2017.01.20},
+  Title                    = {One-Shot Video Object Segmentation},
+  Author                   = {S. Caelles and K.-K. Maninis and J. Pont-Tuset and \textbf{L. Leal-Taix{\'e}} and D. Cremers and L. Van Gool},
+  Journal                  = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+  Year                     = {2017},
+
+  Authorweb                = {S. Caelles and K.-K. Maninis and J. Pont-Tuset and L. Leal-Taix{\'e} and D. Cremers and L. Van Gool},
+  Icon                     = {{{ site.url }}/images/papers/CaeManPonLeaCreVanCVPR2017.png},
+  Pllinks                  = {[PDF]:https://arxiv.org/abs/1611.05198},
+
+  Date-added               = {2016-12-23 09:55:21 +0000},
+  Date-modified            = {2016-12-23 09:57:02 +0000},
+  Journalshort             = {CVPR},
+  Timestamp                = {2017.01.20}
 }
 
 @Article{walcharxiv2016,
@@ -33,10 +67,10 @@
   Journal                  = {arXiv:1611.07890v2},
   Year                     = {2016},
 
+  Authorweb                = {F. Walch and C. Hazirbas and L. Leal-Taix{\'e} and T. Sattler and S. Hilsenbeck and D. Cremers},
   Icon                     = {{{ site.url }}/images/papers/WalHazLeaSatHilCreArxiv2016.png},
   Pllinks                  = {[PDF]:https://arxiv.org/abs/1611.07890},
 
-  Authorweb                = {F. Walch and C. Hazirbas and L. Leal-Taix{\'e} and T. Sattler and S. Hilsenbeck and D. Cremers},
   Journalshort             = {arXiv:1611.07890},
   Owner                    = {lealtaix},
   Timestamp                = {2016.11.24}
@@ -48,10 +82,10 @@
   Journal                  = {arXiv:1607.07304 [Submitted to IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)]},
   Year                     = {2016},
 
+  Authorweb                = {R. Henschel and L. Leal-Taix{\'e} and B. Rosenhahn and K. Schindler},
   Icon                     = {{{ site.url }}/images/papers/HenLeaRosSchArxiv2016.png},
   Pllinks                  = {[PDF]:https://arxiv.org/abs/1607.07304},
 
-  Authorweb                = {R. Henschel and L. Leal-Taix{\'e} and B. Rosenhahn and K. Schindler},
   Date-added               = {2016-07-26 08:08:11 +0000PP},
   Date-modified            = {2016-07-26 08:34:40 +0000},
   Journalshort             = {arXiv:1607.07304},
@@ -65,10 +99,10 @@
   Journal                  = {IEEE Conference on Computer Vision and Pattern Recognition Workshops (CVPR). DeepVision: Deep Learning for Computer Vision.},
   Year                     = {2016},
 
+  Authorweb                = {L. Leal-Taix{\'e} and C. Canton-Ferrer and K. Schindler},
   Icon                     = {{{ site.url }}/images/papers/LeaCanSchCVPRW2016.png},
   Pllinks                  = {[PDF]:https://arxiv.org/abs/1604.07866},
 
-  Authorweb                = {L. Leal-Taix{\'e} and C. Canton-Ferrer and K. Schindler},
   Date-added               = {2016-07-07 12:36:46 +0000},
   Date-modified            = {2016-07-07 12:40:20 +0000},
   Journalshort             = {CVPRW. DeepVision: Deep Learning for Computer Vision.},
@@ -81,31 +115,14 @@
   Journal                  = {arXiv:1603.00831},
   Year                     = {2016},
 
+  Authorweb                = {A. Milan and L. Leal-Taix{\'e} and I. Reid and S. Roth and K. Schindler},
   Icon                     = {{{ site.url }}/images/papers/MilLeaReiRotSchArxiv2016.png},
   Pllinks                  = {[PDF]:https://arxiv.org/abs/1603.00831; [MOTChallenge]:http://www.motchallenge.net/},
 
-  Authorweb                = {A. Milan and L. Leal-Taix{\'e} and I. Reid and S. Roth and K. Schindler},
   Date-added               = {2016-07-07 12:35:22 +0000},
   Date-modified            = {2016-07-07 12:40:09 +0000},
   Journalshort             = {arXiv:1603.00831},
   Timestamp                = {2016.05.05}
-}
-
-@Article{lealbookchapter2012,
-  author        = {\textbf{L. Leal-Taix{\'e}} and B. Rosenhahn},
-  title         = {Pedestrian interaction in tracking: the social force model and global optimization methods},
-  journal       = {Modeling, Simulation and Visual Analysis of Crowds: A multidisciplinary perspective},
-  year          = {2013},
-  icon          = {{{ site.url }}/images/papers/LeaRosBookChapter2012.png},
-  pllinks       = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86aWtaeTNoNjJiQ0U; [Code]:{{ site.url }}/code},
-  authorweb     = {L. Leal-Taix{\'e} and B. Rosenhahn},
-  chapter       = {Pedestrian interaction in tracking: the social force model and global optimization methods},
-  date-added    = {2013-07-07 12:34:13 +0000},
-  date-modified = {2013-07-07 12:34:13 +0000},
-  editor        = {S. Ali and K. Nishino and D. Manocha and M. Shah},
-  publisher     = {Springer Berlin Heidelberg},
-  series        = {The International Series in Video Computing},
-  timestamp     = {2013.02.02},
 }
 
 @Article{fenziiccv2015,
@@ -114,10 +131,10 @@
   Journal                  = {IEEE International Conference on Computer Vision (ICCV)},
   Year                     = {2015},
 
+  Authorweb                = {M. Fenzi and L. Leal-Taix{\'e} and J. Ostermann and T. Tuytelaars},
   Icon                     = {{{ site.url }}/images/papers/FenLeaOstTuyICCV2015.png},
   Pllinks                  = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86bEIzb3NzeHJKRWM},
 
-  Authorweb                = {M. Fenzi and L. Leal-Taix{\'e} and J. Ostermann and T. Tuytelaars},
   Date-added               = {2016-07-26 08:10:43 +0000},
   Date-modified            = {2016-10-04 14:11:13 +0000},
   Owner                    = {lealtaix},
@@ -130,10 +147,10 @@
   Journal                  = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   Year                     = {2015},
 
+  Authorweb                = {A. Milan and L. Leal-Taix{\'e} and K. Schindler and I. Reid},
   Icon                     = {{{ site.url }}/images/papers/MilLeaSchReiCVPR2015.png},
   Pllinks                  = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86S0t6VU82cUFVOG8},
 
-  Authorweb                = {A. Milan and L. Leal-Taix{\'e} and K. Schindler and I. Reid},
   Booktitle                = {CVPR},
   Date-added               = {2016-07-07 12:34:30 +0000},
   Date-modified            = {2016-07-07 12:34:30 +0000},
@@ -147,10 +164,10 @@
   Journal                  = {arXiv:1504.01942},
   Year                     = {2015},
 
+  Authorweb                = {L. Leal-Taix{\'e} and A. Milan and I. Reid and S. Roth and K. Schindler},
   Icon                     = {{{ site.url }}/images/papers/LeaMilReiRotSchArxiv2015.png},
   Pllinks                  = {[PDF]:https://arxiv.org/abs/1504.01942; [MOTChallenge]:http://www.motchallenge.net/},
 
-  Authorweb                = {L. Leal-Taix{\'e} and A. Milan and I. Reid and S. Roth and K. Schindler},
   Date-added               = {2016-07-07 12:34:30 +0000},
   Date-modified            = {2016-07-07 12:40:30 +0000},
   Owner                    = {laurale},
@@ -163,10 +180,10 @@
   Journal                  = {Computerized Medical Imaging and Graphics},
   Year                     = {2015},
 
+  Authorweb                = {D.A.B. Oliveria and L. Leal-Taix{\'e} and R.Q. Feitosa and B. Rosenhahn},
   Icon                     = {{{ site.url }}/images/papers/OliLeaFeiRosCMIG2015.png},
   Pllinks                  = {[PDF]:http://www.sciencedirect.com/science/article/pii/S0895611115001469},
 
-  Authorweb                = {D.A.B. Oliveria and L. Leal-Taix{\'e} and R.Q. Feitosa and B. Rosenhahn},
   Date-added               = {2016-07-07 12:38:15 +0000},
   Date-modified            = {2016-07-07 12:40:14 +0000},
   Timestamp                = {2015.01.01}
@@ -178,10 +195,10 @@
   Journal                  = {IEEE Winter Conference on Applications of Computer Vision (WACV)},
   Year                     = {2015},
 
+  Authorweb                = {M. Fenzi and L. Leal-Taix{\'e} and K. Schindler and B. Rosenhahn},
   Icon                     = {{{ site.url }}/images/papers/FenLeaSchOstWACV2015.png},
   Pllinks                  = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86U1Z2eFJvZW44TXc},
 
-  Authorweb                = {M. Fenzi and L. Leal-Taix{\'e} and K. Schindler and B. Rosenhahn},
   Owner                    = {lealtaix},
   Timestamp                = {2015.01 .07}
 }
@@ -192,10 +209,10 @@
   Journal                  = {German Conference on Pattern Recognition (GCPR)},
   Year                     = {2014},
 
+  Authorweb                = {R. Henschel and L. Leal-Taix{\'e} and B. Rosenhahn},
   Icon                     = {{{ site.url }}/images/papers/HenLeaRosGCPR2014.png},
   Pllinks                  = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86ZW5CSUpOclZBb2M},
 
-  Authorweb                = {R. Henschel and L. Leal-Taix{\'e} and B. Rosenhahn},
   Date-added               = {2016-07-07 12:40:44 +0000},
   Date-modified            = {2016-07-07 12:41:26 +0000},
   Timestamp                = {2014.10.10}
@@ -207,10 +224,10 @@
   Journal                  = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   Year                     = {2014},
 
+  Authorweb                = {L. Leal-Taix{\'e} and M. Fenzi and A. Kuznetsova and B. Rosenhahn and S. Savarese},
   Icon                     = {{{ site.url }}/images/papers/LeaFenKuzRosSavCVPR2014.png},
   Pllinks                  = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86SGRtUy1iX2hmM1U; [SUNw abstract]:https://drive.google.com/open?id=0B1e2GU8Qot86UjNoRWU2MXgwLWs},
 
-  Authorweb                = {L. Leal-Taix{\'e} and M. Fenzi and A. Kuznetsova and B. Rosenhahn and S. Savarese},
   Date-added               = {2016-07-07 12:34:13 +0000},
   Date-modified            = {2016-07-07 12:34:13 +0000},
   Timestamp                = {2014.06.06}
@@ -236,10 +253,10 @@
   Journal                  = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   Year                     = {2013},
 
+  Authorweb                = {M. Fenzi and L. Leal-Taix{\'e} and B. Rosenhahn and J. Ostermann},
   Icon                     = {{{ site.url }}/images/papers/FenLeaRosOstCVPR2013.png},
   Pllinks                  = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86cTRnWGFnZ3dCQ1k},
 
-  Authorweb                = {M. Fenzi and L. Leal-Taix{\'e} and B. Rosenhahn and J. Ostermann},
   Date-added               = {2016-07-07 12:34:13 +0000},
   Date-modified            = {2016-07-07 12:34:13 +0000},
   Timestamp                = {2013.06.06}
@@ -251,26 +268,32 @@
   Journal                  = {IEEE International Conference on Computer Vision (ICCV) Workshops. 3rd Workshop on Consumer Depth Cameras for Computer Vision (CDC4CV)},
   Year                     = {2013},
 
+  Authorweb                = {A. Kuznetsova and L. Leal-Taix{\'e} and B. Rosenhahn},
   Icon                     = {{{ site.url }}/images/papers/KuzLeaRosICCVW2013.png},
   Pllinks                  = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86R0Rkb0hjS1JodFE},
 
-  Authorweb                = {A. Kuznetsova and L. Leal-Taix{\'e} and B. Rosenhahn},
   Date-added               = {2016-07-07 12:34:13 +0000},
   Date-modified            = {2016-07-07 12:34:13 +0000},
   Timestamp                = {2013.04.03}
 }
 
-@Article{maleschlijskibio2011,
-  author        = {S. Maleschlijski and \textbf{L. Leal-Taix{\'e}} and S. Weisse and A. Di Fino and N. Aldred and A. S. Clare and G. H. Sendra and B. Rosenhahn and A. Rosenhahn},
-  title         = {A stereoscopic approach for three dimensional tracking of marine biofouling microorganisms},
-  journal       = {Microscopic Image Analysis with Applications in Biology (MIAAB)},
-  year          = {2011},
-  icon          = {{{ site.url }}/images/papers/MalLeaWeiFinAldClaSenRosRos2011.png},
-  pllinks       = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86OE8ySk13ZjRUdlk},
-  authorweb     = {S. Maleschlijski and L. Leal-Taix{\'e} and S. Weisse and A. Di Fino and N. Aldred and A. S. Clare and G. H. Sendra and B. Rosenhahn and A. Rosenhahn},
-  date-added    = {2016-07-07 12:34:13 +0000},
-  date-modified = {2016-07-07 12:34:13 +0000},
-  timestamp     = {2011.10.10},
+@Article{lealbookchapter2012,
+  Title                    = {Pedestrian interaction in tracking: the social force model and global optimization methods},
+  Author                   = {\textbf{L. Leal-Taix{\'e}} and B. Rosenhahn},
+  Journal                  = {Modeling, Simulation and Visual Analysis of Crowds: A multidisciplinary perspective},
+  Year                     = {2013},
+
+  Authorweb                = {L. Leal-Taix{\'e} and B. Rosenhahn},
+  Icon                     = {{{ site.url }}/images/papers/LeaRosBookChapter2012.png},
+  Pllinks                  = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86aWtaeTNoNjJiQ0U; [Code]:{{ site.url }}/code},
+
+  Chapter                  = {Pedestrian interaction in tracking: the social force model and global optimization methods},
+  Date-added               = {2013-07-07 12:34:13 +0000},
+  Date-modified            = {2013-07-07 12:34:13 +0000},
+  Editor                   = {S. Ali and K. Nishino and D. Manocha and M. Shah},
+  Publisher                = {Springer Berlin Heidelberg},
+  Series                   = {The International Series in Video Computing},
+  Timestamp                = {2013.02.02}
 }
 
 @Article{fenzidagm2012,
@@ -279,26 +302,13 @@
   Journal                  = {German Conference on Pattern Recognition (GCPR)},
   Year                     = {2012},
 
+  Authorweb                = {M. Fenzi and R. Dragon and L. Leal-Taix{\'e} and B. Rosenhahn and J. Ostermann},
   Icon                     = {{{ site.url }}/images/papers/FenDraLeaRosOstDAGM2012.png},
   Pllinks                  = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86c1NwQW43YTU2ZXM},
 
-  Authorweb                = {M. Fenzi and R. Dragon and L. Leal-Taix{\'e} and B. Rosenhahn and J. Ostermann},
   Date-added               = {2016-07-07 12:34:13 +0000},
   Date-modified            = {2016-07-07 12:34:13 +0000},
   Timestamp                = {2012.09.09}
-}
-
-@Article{ponsdagm2011,
-  author        = {G. Pons-Moll and \textbf{L. Leal-Taix{\'e}} and T. Truong and B. Rosenhahn},
-  title         = {Efficient and robust shape matching for model based human motion capture},
-  journal       = {German Conference on Pattern Recognition (GCPR)},
-  year          = {2011},
-  icon          = {{{ site.url }}/images/papers/PonLeaTruRosDAGM2011.png},
-  pllinks       = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86M0s0LXY1NDNhVm8},
-  authorweb     = {G. Pons-Moll and L. Leal-Taix{\'e} and T. Truong and B. Rosenhahn},
-  date-added    = {2016-07-07 12:34:13 +0000},
-  date-modified = {2016-07-07 12:34:13 +0000},
-  timestamp     = {2011.09.09},
 }
 
 @Article{lealcvpr2012,
@@ -307,10 +317,10 @@
   Journal                  = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   Year                     = {2012},
 
+  Authorweb                = {L. Leal-Taix{\'e} and G. Pons-Moll and B. Rosenhahn},
   Icon                     = {{{ site.url }}/images/papers/LeaPonRosCVPR2012.png},
   Pllinks                  = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86UDNfUGVoelNzM0k; [Poster]:https://drive.google.com/open?id=0B1e2GU8Qot86T2psZVV3X2k4bFk; [Code]:{{ site.url }}/code; [Video]:http://youtu.be/639bh3jVOVU},
 
-  Authorweb                = {L. Leal-Taix{\'e} and G. Pons-Moll and B. Rosenhahn},
   Date-added               = {2016-07-07 12:34:13 +0000},
   Date-modified            = {2016-07-07 12:34:13 +0000},
   Timestamp                = {2012.06.06}
@@ -338,11 +348,11 @@
   Journal                  = {Outdoor and Large-Scale Real-World Scene Analysis},
   Year                     = {2012},
 
+  Authorweb                = {L. Leal-Taix{\'e} and G. Pons-Moll and B. Rosenhahn},
   Icon                     = {{{ site.url }}/images/papers/LeaPonRosDagstuhl2012.png},
   Pllinks                  = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86ejhsMzZ2ZDhMSWs; [Code]:{{ site.url }}/code},
   Volume                   = {7474},
 
-  Authorweb                = {L. Leal-Taix{\'e} and G. Pons-Moll and B. Rosenhahn},
   Chapter                  = {Exploiting pedestrian interaction via global optimization and social behaviors},
   Date-added               = {2016-07-07 12:34:13 +0000},
   Date-modified            = {2016-07-07 12:34:13 +0000},
@@ -358,10 +368,10 @@
   Journal                  = {Biointerphases},
   Year                     = {2012},
 
+  Authorweb                = {S. Maleschlijski and G. H. Sendra and A. Di Fino and L. Leal-Taix{\'e} and I. Thome and A. Terfort and N. Aldred and M. Grunze and A. S. Clare and B. Rosenhahn and A. Rosenhahn},
   Icon                     = {{{ site.url }}/images/papers/MalSenDifLeaThoTerAldGruClaRosRosBIO2012.png},
   Pllinks                  = {[PDF]:https://www.researchgate.net/publication/230717042_Three_Dimensional_Tracking_of_Exploratory_Behavior_of_Barnacle_Cyprids_Using_Stereoscopy},
 
-  Authorweb                = {S. Maleschlijski and G. H. Sendra and A. Di Fino and L. Leal-Taix{\'e} and I. Thome and A. Terfort and N. Aldred and M. Grunze and A. S. Clare and B. Rosenhahn and A. Rosenhahn},
   Date-added               = {2016-07-07 12:34:13 +0000},
   Date-modified            = {2016-07-07 12:34:13 +0000},
   Timestamp                = {2012.03.03}
@@ -373,10 +383,10 @@
   Journal                  = {Outdoor and Large-Scale Real-World Scene Analysis},
   Year                     = {2012},
 
+  Authorweb                = {G. Pons-Moll and L. Leal-Taix{\'e} and and J. Gall and B. Rosenhahn},
   Icon                     = {{{ site.url }}/images/papers/PonLeaGalRosDagstuhl12.png},
   Pllinks                  = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86QmFmTkpoVWlsVGs},
 
-  Authorweb                = {G. Pons-Moll and L. Leal-Taix{\'e} and and J. Gall and B. Rosenhahn},
   Chapter                  = {Data-driven manifold for outdoor motion capture},
   Date-added               = {2016-07-07 12:34:13 +0000},
   Date-modified            = {2016-07-07 12:34:13 +0000},
@@ -392,13 +402,43 @@
   Journal                  = {IEEE International Conference on Computer Vision (ICCV) Workshops. 1st Workshop on Modeling, Simulation and Visual Analysis of Large Crowds},
   Year                     = {2011},
 
+  Authorweb                = {L. Leal-Taix{\'e} and G. Pons-Moll and B. Rosenhahn},
   Icon                     = {{{ site.url }}/images/papers/LeaPonRosICCVW2011.png},
   Pllinks                  = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86RXROdThCNEVRRDg; [Code]:{{ site.url }}/code; [Video]:http://youtu.be/1DP3soJVOck},
 
-  Authorweb                = {L. Leal-Taix{\'e} and G. Pons-Moll and B. Rosenhahn},
   Date-added               = {2016-07-07 12:34:13 +0000},
   Date-modified            = {2016-07-07 12:34:13 +0000},
   Timestamp                = {2011.11.11}
+}
+
+@Article{maleschlijskibio2011,
+  Title                    = {A stereoscopic approach for three dimensional tracking of marine biofouling microorganisms},
+  Author                   = {S. Maleschlijski and \textbf{L. Leal-Taix{\'e}} and S. Weisse and A. Di Fino and N. Aldred and A. S. Clare and G. H. Sendra and B. Rosenhahn and A. Rosenhahn},
+  Journal                  = {Microscopic Image Analysis with Applications in Biology (MIAAB)},
+  Year                     = {2011},
+
+  Authorweb                = {S. Maleschlijski and L. Leal-Taix{\'e} and S. Weisse and A. Di Fino and N. Aldred and A. S. Clare and G. H. Sendra and B. Rosenhahn and A. Rosenhahn},
+  Icon                     = {{{ site.url }}/images/papers/MalLeaWeiFinAldClaSenRosRos2011.png},
+  Pllinks                  = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86OE8ySk13ZjRUdlk},
+
+  Date-added               = {2016-07-07 12:34:13 +0000},
+  Date-modified            = {2016-07-07 12:34:13 +0000},
+  Timestamp                = {2011.10.10}
+}
+
+@Article{ponsdagm2011,
+  Title                    = {Efficient and robust shape matching for model based human motion capture},
+  Author                   = {G. Pons-Moll and \textbf{L. Leal-Taix{\'e}} and T. Truong and B. Rosenhahn},
+  Journal                  = {German Conference on Pattern Recognition (GCPR)},
+  Year                     = {2011},
+
+  Authorweb                = {G. Pons-Moll and L. Leal-Taix{\'e} and T. Truong and B. Rosenhahn},
+  Icon                     = {{{ site.url }}/images/papers/PonLeaTruRosDAGM2011.png},
+  Pllinks                  = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86M0s0LXY1NDNhVm8},
+
+  Date-added               = {2016-07-07 12:34:13 +0000},
+  Date-modified            = {2016-07-07 12:34:13 +0000},
+  Timestamp                = {2011.09.09}
 }
 
 @Article{ponsiccv2011,
@@ -407,10 +447,10 @@
   Journal                  = {IEEE International Conference on Computer Vision (ICCV)},
   Year                     = {2011},
 
+  Authorweb                = {G. Pons-Moll and A. Baak and J. Gall and L. Leal-Taix{\'e} and M. Mueller and H.-P.Seidel and B. Rosenhahn},
   Icon                     = {{{ site.url }}/images/papers/PonBaaGalLeaMueSeiRosICCV2011.png},
   Pllinks                  = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86bkVacVVyN0hsNVE; [Suppl.]:https://drive.google.com/open?id=0B1e2GU8Qot86bHJHclVyUTRtRzg},
 
-  Authorweb                = {G. Pons-Moll and A. Baak and J. Gall and L. Leal-Taix{\'e} and M. Mueller and H.-P.Seidel and B. Rosenhahn},
   Date-added               = {2016-07-07 12:34:13 +0000},
   Date-modified            = {2016-07-07 12:34:13 +0000},
   Timestamp                = {2011.08.08}
@@ -422,10 +462,10 @@
   Journal                  = {Video Processing and Computational Video},
   Year                     = {2011},
 
+  Authorweb                = {L. Leal-Taix{\'e} and M. Heydt and A. Rosenhahn and B. Rosenhahn},
   Icon                     = {{{ site.url }}/images/papers/LeaHeyRosRosVPCV2011.png},
   Pllinks                  = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86cEc1eUlYOXh2MzQ},
 
-  Authorweb                = {L. Leal-Taix{\'e} and M. Heydt and A. Rosenhahn and B. Rosenhahn},
   Chapter                  = {Understanding what we cannot see: automatic analysis of 4D digital in-line holography data},
   Date-added               = {2016-07-07 12:34:13 +0000},
   Date-modified            = {2016-07-07 12:34:13 +0000},
@@ -441,10 +481,10 @@
   Journal                  = {German Conference on Pattern Recognition (GCPR)},
   Year                     = {2010},
 
+  Authorweb                = {L. Leal-Taix{\'e} and M. Heydt and S. Weisse and A. Rosenhahn and B. Rosenhahn},
   Icon                     = {{{ site.url }}/images/papers/LeaHeyWeiRosRosDAGM2010.png},
   Pllinks                  = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86NkpNakhwMHZhbVU; [Video]:http://youtu.be/y_70plXPww8?attredirects=0},
 
-  Authorweb                = {L. Leal-Taix{\'e} and M. Heydt and S. Weisse and A. Rosenhahn and B. Rosenhahn},
   Date-added               = {2016-07-07 12:34:13 +0000},
   Date-modified            = {2016-07-07 12:34:13 +0000},
   Timestamp                = {2010.06.06}
@@ -456,10 +496,10 @@
   Journal                  = {IEEE Workshops on Motion and Video Computing (WMVC)},
   Year                     = {2009},
 
+  Authorweb                = {L. Leal-Taix{\'e} and M. Heydt and A. Rosenhahn and B. Rosenhahn},
   Icon                     = {{{ site.url }}/images/papers/LeaHeyRosRosWMVC2009.png},
   Pllinks                  = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86NmE3NC1BaXZUa0U},
 
-  Authorweb                = {L. Leal-Taix{\'e} and M. Heydt and A. Rosenhahn and B. Rosenhahn},
   Date-added               = {2016-07-07 12:34:13 +0000},
   Date-modified            = {2016-07-07 12:34:13 +0000},
   Timestamp                = {2009.06.06}
@@ -484,25 +524,14 @@
   Journal                  = {World Congress on Medical Physics and Biomedical Engineering},
   Year                     = {2009},
 
+  Authorweb                = {L. Leal-Taix{\'e} and A. U. Coskun and B. Rosenhahn and D. Brooks},
   Icon                     = {{{ site.url }}/images/papers/LeaCosRosBroMED2009.png},
   Pllinks                  = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86RXhSdGlZZEplRlE},
 
-  Authorweb                = {L. Leal-Taix{\'e} and A. U. Coskun and B. Rosenhahn and D. Brooks},
   Date-added               = {2016-07-07 12:34:13 +0000},
   Date-modified            = {2016-07-07 12:34:13 +0000},
   Timestamp                = {2009.04.04}
 }
 
-@Article{lealtaixearxiv2017,
-  author       = {\textbf{L. Leal-Taix{\'e}} and A. Milan and K. Schindler and D. Cremers and I. Reid and S. Roth},
-  title        = {Tracking the Trackers: An Analysis of the State of the Art in Multiple Object Tracking},
-  journal      = {arXiv:1704.02781},
-  year         = {2017},
-  icon         = {{{ site.url }}/images/papers/LeaMilSchCreReiRotArxiv2017.png},
-  pllinks      = {[PDF]:https://arxiv.org/abs/1704.02781},
-  authorweb    = {L. Leal-Taix{\'e} and A. Milan and K. Schindler and D. Cremers and I. Reid and S. Roth},
-  journalshort = {arXiv:1704.02781},
-  timestamp    = {2017.04.12},
-}
+@comment{jabref-meta: databaseType:bibtex;}
 
-@Comment{jabref-meta: databaseType:bibtex;}
