semantic osvos added

--- a/mypubs.bib
+++ b/mypubs.bib
@@ -1,13 +1,5 @@
-%% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
+% Encoding: UTF-8
 
-%% Created for Laura Leal-Taixe at 2017-08-04 18:21:24 +0200 
-
-
-%% Saved with string encoding Unicode (UTF-8) 
-
-
-@comment{jabref-meta: databaseType:bibtex;}
 
 
 
@@ -443,3 +435,19 @@
 	Timestamp = {2009.04.04},
 	Title = {Automatic segmentation of arteries in multi-stain histology images},
 	Year = {2009}}
+
+@Article{maninisarxiv2017,
+  author        = {K.-K. Maninis and S. Caelles and Y. Chen and J. Pont-Tuset and \textbf{L. Leal-Taix{\'e}} and D. Cremers and L. Van Gool},
+  title         = {Video Object Segmentation Without Temporal Information},
+  journal       = {arXiv:1709.06031},
+  year          = {2017},
+  authorweb     = {K.-K. Maninis and S. Caelles and Y. Chen and J. Pont-Tuset and L. Leal-Taix{\'e} and D. Cremers and L. Van Gool},
+  date-added    = {2017-10-09 09:55:21 +0000},
+  date-modified = {2017-10-09 09:57:02 +0000},
+  icon          = {{{ site.url }}/images/papers/CaeManPonLeaCreVanCVPR2017.png},
+  journalshort  = {arXiv:1709.06031},
+  pllinks       = {[PDF]:https://arxiv.org/abs/1709.06031},
+  timestamp     = {2017.10.09},
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
