semantic osvos added, fixed pub order

--- a/mypubs.bib
+++ b/mypubs.bib
@@ -50,32 +50,34 @@
 	Title = {One-Shot Video Object Segmentation},
 	Year = {2017}}
 
-@article{walchiccv2017,
-	Author = {F. Walch and C. Hazirbas and \textbf{L. Leal-Taix{\'e}} and T. Sattler and S. Hilsenbeck and D. Cremers},
-	Authorweb = {F. Walch and C. Hazirbas and L. Leal-Taix{\'e} and T. Sattler and S. Hilsenbeck and D. Cremers},
-	Date-Modified = {2017-08-04 16:21:24 +0000},
-	Icon = {{{ site.url }}/images/papers/WalHazLeaSatHilCreICCV2017.png},
-	Journal = {IEEE International Conference on Computer Vision (ICCV)},
-	Journalshort = {ICCV},
-	Owner = {lealtaix},
-	Pllinks = {[PDF]:https://arxiv.org/abs/1611.07890},
-	Timestamp = {2016.11.24},
-	Title = {Image-based localization using LSTMs for structured feature correlation},
-	Year = {2017}}
+@Article{walchiccv2017,
+  author        = {F. Walch and C. Hazirbas and \textbf{L. Leal-Taix{\'e}} and T. Sattler and S. Hilsenbeck and D. Cremers},
+  title         = {Image-based localization using LSTMs for structured feature correlation},
+  journal       = {IEEE International Conference on Computer Vision (ICCV)},
+  year          = {2017},
+  authorweb     = {F. Walch and C. Hazirbas and L. Leal-Taix{\'e} and T. Sattler and S. Hilsenbeck and D. Cremers},
+  date-modified = {2017-08-04 16:21:24 +0000},
+  icon          = {{{ site.url }}/images/papers/WalHazLeaSatHilCreICCV2017.png},
+  journalshort  = {ICCV},
+  owner         = {lealtaix},
+  pllinks       = {[PDF]:https://arxiv.org/abs/1611.07890},
+  timestamp     = {2017.09.24},
+}
 
-@article{henschelarxiv2016,
-	Author = {R. Henschel and \textbf{L. Leal-Taix{\'e}} and B. Rosenhahn and K. Schindler},
-	Authorweb = {R. Henschel and L. Leal-Taix{\'e} and B. Rosenhahn and K. Schindler},
-	Date-Added = {2016-07-26 08:08:11 +0000PP},
-	Date-Modified = {2016-07-26 08:34:40 +0000},
-	Icon = {{{ site.url }}/images/papers/HenLeaRosSchArxiv2016.png},
-	Journal = {arXiv:1607.07304 [Submitted to IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)]},
-	Journalshort = {arXiv:1607.07304},
-	Owner = {lealtaix},
-	Pllinks = {[PDF]:https://arxiv.org/abs/1607.07304},
-	Timestamp = {2016.07.07},
-	Title = {Tracking with multi-level features},
-	Year = {2016}}
+@Article{henschelarxiv2016,
+  author        = {R. Henschel and \textbf{L. Leal-Taix{\'e}} and B. Rosenhahn and K. Schindler},
+  title         = {Tracking with multi-level features},
+  journal       = {arXiv:1607.07304},
+  year          = {2016},
+  authorweb     = {R. Henschel and L. Leal-Taix{\'e} and B. Rosenhahn and K. Schindler},
+  date-added    = {2016-07-26 08:08:11 +0000PP},
+  date-modified = {2016-07-26 08:34:40 +0000},
+  icon          = {{{ site.url }}/images/papers/HenLeaRosSchArxiv2016.png},
+  journalshort  = {arXiv:1607.07304},
+  owner         = {lealtaix},
+  pllinks       = {[PDF]:https://arxiv.org/abs/1607.07304},
+  timestamp     = {2016.07.07},
+}
 
 @article{lealcvprw2016,
 	Author = {\textbf{L. Leal-Taix{\'e}} and C. Canton-Ferrer and K. Schindler},
