admm transductive paper

--- a/mypubs.bib
+++ b/mypubs.bib
@@ -452,4 +452,18 @@
   timestamp     = {2017.10.09},
 }
 
+@Article{laudearxiv2017,
+  author        = {Emanuel Laude and Jan-Hendrik Lange and Jonas Sch{\"u}pfer and Csaba Domokos and \textbf{L. Leal-Taix{\'e}} and Frank R. Schmidt and Bjoern Andres and Daniel Cremers},
+  title         = {Discrete-Continuous ADMM for Transductive Inference in Higher-Order MRFs},
+  journal       = {arxiv:1705.05020},
+  year          = {2017},
+  authorweb     = {Emanuel Laude and Jan-Hendrik Lange and Jonas Sch{\"u}pfer and Csaba Domokos and L. Leal-Taix{\'e} and Frank R. Schmidt and Bjoern Andres and Daniel Cremers},
+  date-modified = {2017-11-28 16:21:24 +0000},
+  icon          = {{{ site.url }}/images/papers/LauLanSchDomLeaSchAndCreArxiv2017.png},
+  journalshort  = {arxiv:1705.05020},
+  owner         = {lealtaix},
+  pllinks       = {[PDF]:https://arxiv.org/abs/1705.05020},
+  timestamp     = {2017.11.28},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
